# vkw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md
include/vkWrappers/: Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  ComputePipeline.hpp  DescriptorPool.hpp  DescriptorSetLayout.hpp  Device.hpp  IMemoryObject.hpp  Image.hpp  ImageView.hpp  Instance.hpp  Memory.hpp  PipelineLayout.hpp  Queue.hpp  QueueFamilies.hpp  Validation.hpp  utils.hpp  wrappers.hpp
include/vkWrappers/wrappers/: AccelerationStructure.hpp  AccelerationStructureBuildInfo.hpp  BaseAccelerationStructure.hpp  BottomLevelAccelerationStructure.hpp  Buffer.hpp  BufferView.hpp  CommandBuffer.hpp  CommandPool.hpp  ComputePipeline.hpp  ComputeProgram.hpp  DebugMessenger.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  Formats.hpp  Framebuffer.hpp  GraphicsPipeline.hpp  GraphicsProgram.hpp  IMemoryObject.hpp  Image.hpp  ImageView.hpp  Instance.hpp  Memory.hpp  MemoryCommon.hpp  MeshShaderProgram.hpp  PipelineLayout.hpp  Queue.hpp  QueueFamilies.hpp  RenderPass.hpp  RenderTarget.hpp  Sampler.hpp  Surface.hpp  Swapchain.hpp  Synchronization.hpp  TopLevelAccelerationStructure.hpp  Validation.hpp  utils.hpp
include/vkWrappers/wrappers/extensions/: DeviceExtensions.hpp  InstanceExtensions.hpp
include/vkw/: vkw.hpp
include/vkw/detail/: ASGeometryData.hpp  AccelerationStructureBuildInfo.hpp  BaseAS.hpp  BaseAccelerationStructure.hpp  BottomLevelAS.hpp  BottomLevelAccelerationStructure.hpp  Buffer.hpp  BufferView.hpp  CommandBuffer.hpp  CommandPool.hpp  Common.hpp  ComputePipeline.hpp  DebugMessenger.hpp  DescriptorBuffer.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  Framebuffer.hpp  GraphicsPipeline.hpp  Image.hpp  ImageView.hpp  Instance.hpp  MemoryCommon.hpp  PipelineLayout.hpp  Queue.hpp  RayTracingPipeline.hpp  RenderPass.hpp  RenderingAttachment.hpp  Sampler.hpp  Surface.hpp  Swapchain.hpp  Synchronization.hpp  TopLevelAS.hpp  TopLevelAccelerationStructure.hpp  utils.hpp
include/vkw/high_level/: ComputeProgram.hpp  Types.hpp
include/vkw/wrappers/: AccelerationStructureBuildInfo.hpp  BaseAccelerationStructure.hpp  BottomLevelAccelerationStructure.hpp  Buffer.hpp  BufferView.hpp  CommandBuffer.hpp  CommandPool.hpp  ComputePipeline.hpp  DebugMessenger.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  Framebuffer.hpp  GraphicsPipeline.hpp  Image.hpp  ImageView.hpp  Instance.hpp  MemoryCommon.hpp  PipelineLayout.hpp  Queue.hpp  RenderPass.hpp  RenderingAttachment.hpp  Sampler.hpp  Surface.hpp  Swapchain.hpp  Synchronization.hpp  TopLevelAccelerationStructure.hpp  utils.hpp
main/: ArrayAdd.cpp  ArraySaxpy.cpp  BufferCopy.cpp  Common.hpp  GaussianBlur.cpp  MeshDisplay.cpp  Triangle.cpp
main/shaders/: array_saxpy.comp  img_gaussian.comp  mesh_display.frag  triangle.vert
main/utils/: ImgUtils.cpp
samples/: ArrayAdd.cpp  ArraySaxpy.cpp  BufferCopy.cpp  CMakeLists.txt  Common.hpp  GaussianBlur.cpp  IComputeSample.hpp  IGraphicsSample.cpp  IGraphicsSample.hpp  MeshDisplay.cpp  MeshShader.cpp  RayQueryTriangle.cpp  RayQueryTriangle.hpp  SampleTest.cpp  SimpleTriangle.cpp  SimpleTriangle.hpp  Triangle.cpp  main_android.cpp  main_desktop.cpp
samples/android/: settings.gradle
samples/android/app/: build.gradle
samples/android/app/src/main/: AndroidManifest.xml
samples/android/app/src/main/java/com/aarnaud/vkwsamples/: MainActivity.java  SampleActivity.java  SampleInfo.java  SampleListArrayAdapter.java
samples/android/app/src/main/res/layout/: activity_main.xml  activity_sample.xml  list_view_item.xml
samples/android/app/src/main/res/values/: strings.xml  themes.xml
samples/android/app/src/main/res/values-night/: themes.xml
samples/android/gradle/wrapper/: gradle-wrapper.properties
samples/shaders/: array_add.comp  array_saxpy.comp  img_gaussian.comp  mesh_display.frag  mesh_display.vert  mesh_shader.frag  mesh_shader.mesh  ray_query_triangle.comp  triangle.frag  triangle.vert
samples/utils/: ImgUtils.cpp  ImgUtils.hpp
scripts/: format-all.sh  prepareMesh.py
shaders/: array_add.comp  array_saxpy.comp  img_gaussian.comp
src/: ASGeometryData.cpp  AccelerationStructure.cpp  BaseAccelerationStructure.cpp  BottomLevelAS.cpp  BottomLevelAccelerationStructure.cpp  CommandBuffer.cpp  ComputePipeline.cpp  DebugMessenger.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Device.cpp  DeviceExtensions.cpp  GraphicsPipeline.cpp  ImageView.cpp  Instance.cpp  InstanceExtensions.cpp  Memory.cpp  PipelineLayout.cpp  Queue.cpp  QueueFamilies.cpp  RayTracingPipeline.cpp  RenderPass.cpp  Surface.cpp  Swapchain.cpp  Synchronization.cpp  TopLevelAS.cpp  TopLevelAccelerationStructure.cpp  Validation.cpp  utils.cpp
test/: testDescriptorBuffers.cpp
tests/: CMakeLists.txt
tests/include/: DescriptorBuffers.hpp  DescriptorIndexing.hpp  Utils.hpp
tests/shaders/: FillStorageBuffersDescriptorBufferIndexing.comp  FillStorageBuffersDescriptorIndexing.comp  FillStorageImagesDescriptorIndexing.comp  UpdateStorageBuffersDescriptorIndexing.comp  UpdateStorageImagesDescriptorIndexing.comp
tests/src/: DescriptorBuffers.cpp  DescriptorIndexing.cpp  testDescriptorIndexing.cpp  vkw_tests.cpp
utils/: ImgUtils.cpp  ImgUtils.hpp  Makefile
wrappers/: Makefile
wrappers/include/: Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  ComputePipeline.hpp  DescriptorPool.hpp  DescriptorSetLayout.hpp  Device.hpp  Formats.hpp  IMemoryObject.hpp  Image.hpp  ImageView.hpp  Instance.hpp  Memory.hpp  PipelineLayout.hpp  Queue.hpp  QueueFamilies.hpp  Validation.hpp  utils.hpp
wrappers/src/: ComputePipeline.cpp  DescriptorPool.cpp  DescriptorSetLayout.cpp  Device.cpp  Instance.cpp  Memory.cpp  PipelineLayout.cpp  QueueFamilies.cpp  Validation.cpp
